# BiotechOS

./: .agent-locks.md  .gitignore  Architecture.md  Claude-README.md  Claude-Status.md  README.md  index.html
.github/workflows/: keepalive.yml
backend/: pyproject.toml
backend/biotechos/: config.py  review.py
backend/biotechos/api/: main.py
backend/biotechos/engine/: artifacts.py  attachments.py  boltz.py  categories.py  cfo.py  classifier.py  curvefit.py  decisions.py  graph.py  identity.py  inbox.py  kb_profile.py  llm.py  metrics.py  prolif_contacts.py  quote_related.py  quotes.py  registry.py  structure.py  target_names.py  tpp.py  tpp_builder.py  triage.py
backend/biotechos/engine/corpus/: __init__.py  qa.py  store.py
backend/biotechos/engine/extract/: __init__.py
backend/biotechos/engine/processors/: __init__.py  data.py  legal.py  quote.py
backend/biotechos/engine/processors/analyzers/: __init__.py  adme.py  dose_response.py  generic.py
backend/biotechos/evals/: __init__.py  __main__.py  api.py  graders.py  judge.py  report.py  runner.py  ui.html
backend/biotechos/ingest/: decrypt.py  mailbox.py  seed_kras.py  table_loader.py
backend/biotechos/ingest/anonymize/: __init__.py
backend/biotechos/integrations/: competitive.py
backend/biotechos/state/: db.py  schema.sql
data/curated/: demo_set.csv
data/evals/: README.md  baseline.json  classify.jsonl  decision.jsonl  fields.jsonl  identity.jsonl  qa.jsonl
data/reference/: target_names.json
data/seed/kras/: emails.json  (+6 more)
docs/: index.html
frontend/: next.config.ts
landing/: index.html
(+95 files in other folders)
