[project]
name = "biotechos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.116.0",
    "fastapi>=0.139.0",
    "gemmi>=0.7.5",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.32",
    "rdkit>=2026.3.3",
    "scipy>=1.18.0",
    "uvicorn[standard]>=0.50.2",
]
